--- a/app/assets/stylesheets/revised/emails/email_hot_sheet.scss
+++ b/app/assets/stylesheets/revised/emails/email_hot_sheet.scss
@@ -32,9 +32,22 @@
 .hot-sheet-bike-display {
   padding-top: 2px;
   .bike-display {
+    border: none;
+    background: #eeeeee;
     td {
       border: none;
       padding: 0;
+    }
+    .info-holder {
+      padding-top: 8px;
+    }
+  }
+  .bike-title {
+    background: #dddddd;
+    a {
+      display: block;
+      padding: 4px 16px 0 16px;
+      font-size: 17px;
     }
   }
 }
