--- a/app/views/admin/dashboard/tsvs.html.haml
+++ b/app/views/admin/dashboard/tsvs.html.haml
@@ -12,11 +12,11 @@
         Tsv reports:
 .row
   .col-md-6
-    = form_tag admin_update_tsv_blacklist_path, method: :put, multipart: true do
-      = label_tag :tsv_blacklist do
-        Blacklist Bike Urls, <strong>1 per line</strong>. These can be the id (the number in the url), the bike url, admin url or edit url
+    = form_tag admin_update_tsv_blocklist_path, method: :put, multipart: true do
+      = label_tag :tsv_blocklist do
+        Blocklist Bike Urls, <strong>1 per line</strong>. These can be the id (the number in the url), the bike url, admin url or edit url
         .form-group
-          = text_area_tag :blacklist, @blacklist.map{|i| "#{ENV['BASE_URL']}/bikes/#{i}"}.join("\n"), rows: 10, class: 'form-control'
+          = text_area_tag :blocklist, @blocklist.map{|i| "#{ENV['BASE_URL']}/bikes/#{i}"}.join("\n"), rows: 10, class: 'form-control'
 
     = submit_tag "Save changes", class: "btn btn-success submit-bike-update"
   - if @tsvs.any?
