--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -17,7 +17,7 @@
       .d-md-block.d-none
         %label &nbsp;
         .text-form-control
-          Whitelisted domain with passwordless sign in, no invite restrictions
+          permitted domain with passwordless sign in, no invite restrictions
 .row
   .col-md-6
     .form-group
@@ -143,7 +143,7 @@
             .form-group
               = f.label :passwordless_user_domain do
                 %span
-                Whitelisted domain for passwordless sign in
+                permitted domain for passwordless sign in
                 %small
                   <span class="text-success">passwordless user feature</span>
               .input-group
