--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -113,7 +113,7 @@
             = number_with_delimiter @organization.remaining_invitation_count
           - else
             %em
-              Whitelisted domain, no invite restrictions
+              permitted domain, no invite restrictions
       %tr
         %td
           Website
