--- a/app/views/shared/_content_skeleton.html.haml
+++ b/app/views/shared/_content_skeleton.html.haml
@@ -1,6 +1,6 @@
 .container
   .row
-    / Unless one of the whitelisted pages, wrap it in .legacy-content-wrap
+    -# Unless one of the permitted pages, wrap it in .legacy-content-wrap
     - additional_class = %w().include?(content_page_type) ? "" : "legacy-content-wrap"
     .col-md-8.primary-content-block{ class: additional_class }
 
