Virtual Line Appointments (#1636)

--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -14,6 +14,21 @@
   overflow: hidden;
 }
 
+// Some font styles
+$body-font-family: "Open Sans", sans-serif;
+$normal-font-weight: 400;
+$strong-font-weight: 700;
+$light-italic-weight: 300;
+
+body {
+  font-family: $body-font-family;
+  font-weight: $normal-font-weight;
+}
+
+// Revised/Legacy Nav colors
+$primary-nav-background: #111111;
+$primary-nav-text-color: #a4a4a4;
+
 // General styles
 @import "../stylesheets/utils";
 @import "../stylesheets/table_extensions";
@@ -24,6 +39,7 @@
 @import "../stylesheets/admin/general";
 @import "../stylesheets/admin/bikes";
 @import "../stylesheets/period_selection";
+@import "../stylesheets/customer_virtual_line";
 
 // Uppy Styles
 @import "@uppy/core/dist/style.css";
