--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -8,10 +8,10 @@
     = stylesheet_pack_tag "application_css"
 
   / manually override body_class in a few situations :/
-  - body_class = "welcome-page" if current_page?(root_path) and controller_name == "welcome"
-  - body_class = "vendor-signup-page" if current_page?(:vendor_signup)
-  - body_class = "news-page" if controller_name == "news"
-  %body{ id: page_id, class:  body_class }
+  - admin_body_class = "welcome-page" if current_page?(root_path) and controller_name == "welcome"
+  - admin_body_class = "vendor-signup-page" if current_page?(:vendor_signup)
+  - admin_body_class = "news-page" if controller_name == "news"
+  %body{ id: page_id, class:  admin_body_class || body_class }
     %nav.navbar.navbar-expand-md.navbar-light.bg-light.admin-navbar
       %span.navbar-brand
         = link_to (image_tag("logo.svg")), admin_root_path
