--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -26,6 +26,10 @@
         %li
           = active_link t(".discuss"), "https://discuss.bikeindex.org", class: "menu-item"
       - else
+        - if current_organization.appointment_functionality_enabled?
+          %li.divider-below
+            = active_link t(".virtual_line"), organization_lines_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
+          %li.divider
         - on_bikes_path = controller_name == "bikes" && action_name == "index" # Because we want to ignore queries and stuff
         %li
           = link_to t(".bikes"), organization_bikes_path(organization_id: current_organization.to_param), class: "menu-item #{on_bikes_path ? 'active' : ''}"
