--- a/app/views/admin/graduated_notifications/index.html.haml
+++ b/app/views/admin/graduated_notifications/index.html.haml
@@ -40,7 +40,7 @@
 = paginate @graduated_notifications, views_prefix: "admin"
 
 
-%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable
+%table.table.table-striped.table-bordered.table-sm.without-exterior-border
   %thead.small-header.hidden-md-down
     %th
       = sortable "created_at"
