--- a/app/views/bikes/_owner_bike_status.html.haml
+++ b/app/views/bikes/_owner_bike_status.html.haml
@@ -10,7 +10,7 @@
     %h3.uncap
       = pluralize parking_notifications.count, "current notification"
       for this #{@bike.type}!
-    %table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table.text-dark{ style: "color: #666;" }
+    %table.table.table-striped.table-bordered.table-sm.without-exterior-border.text-dark{ style: "color: #666;" }
       %thead.small-header.hidden-md-down
         %th
           Created
