--- a/app/views/organized/emails/index.html.haml
+++ b/app/views/organized/emails/index.html.haml
@@ -4,7 +4,7 @@
   %h1
     Customize Emails
 
-%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable
+%table.table.table-striped.table-bordered.table-sm.without-exterior-border
   %thead.small-header.hidden-md-down
     %th Kind
     %th Enabled?
