--- a/app/views/admin/mail_snippets/index.html.haml
+++ b/app/views/admin/mail_snippets/index.html.haml
@@ -43,7 +43,7 @@
 = paginate @mail_snippets, views_prefix: "admin"
 
 
-%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable
+%table.table.table-striped.table-bordered.table-sm.without-exterior-border
   %thead.small-header.hidden-md-down
     %th= sortable "created_at"
     %th
