--- a/app/assets/stylesheets/revised/emails/email_hot_sheet.scss
+++ b/app/assets/stylesheets/revised/emails/email_hot_sheet.scss
@@ -19,7 +19,7 @@
     display: inline-block;
     padding: 12px 16px;
     border: 1px solid darken(#aaaaaa, 5%);
-    background: #aaaaaa;
+    background-color: #aaaaaa;
     font-weight: bold;
     border-radius: 3px;
     max-width: 100%;
@@ -31,23 +31,31 @@
 
 .hot-sheet-bike-display {
   padding-top: 2px;
+  .bike-title {
+    background-color: #dddddd;
+    a {
+      display: block;
+      padding: 4px 16px 0 16px;
+      font-size: 17px;
+    }
+  }
   .bike-display {
     border: none;
-    background: #eeeeee;
-    td {
+    background-color: #eeeeee;
+    td.bike-display-wrapper-cell {
       border: none;
       padding: 0;
     }
     .info-holder {
       padding-top: 8px;
     }
-  }
-  .bike-title {
-    background: #dddddd;
-    a {
-      display: block;
-      padding: 4px 16px 0 16px;
-      font-size: 17px;
+    .table-list {
+      margin-top: 20px;
+      border: 1px solid #dddddd;
+      tr td {
+        line-height: 1.5;
+        border-color: #dddddd;
+      }
     }
   }
 }
