--- a/app/views/organized_mailer/hot_sheet.html.haml
+++ b/app/views/organized_mailer/hot_sheet.html.haml
@@ -6,7 +6,7 @@
 - @stolen_records.each do |stolen_record|
   - bike = stolen_record.bike
   - thumb_url = bike.thumb_path || bike.stock_photo_url
-  - bike_link = bike_url(bike, organization_id: @organization.to_param)
+  - bike_link = bike_url(bike, organization_id: @organization.to_param, sign_in_if_not: true)
 
   - unless thumb_url.present?
     - thumbclass = 'placeholder'
