--- a/app/views/layouts/walkrightup.html.haml
+++ b/app/views/layouts/walkrightup.html.haml
@@ -28,8 +28,11 @@
               %h2
                 On deck
               %ul
-                - @appointments_in_line.on_deck.each do |appointment|
-                  %li= appointment.name
+                - @appointments_in_line.paging_or_on_deck.each do |appointment|
+                  %li
+                    = appointment.name
+                    - if appointment.paging?
+                      %em.text-warning #{organization.short_name} is ready for you!
 
 
       %hr
