--- a/app/views/org_public/walkrightup/show.html.haml
+++ b/app/views/org_public/walkrightup/show.html.haml
@@ -1,15 +1,40 @@
 -# TODO translations
 - if @appointment.id.present?
-  - if @appointment.on_deck?
+  - if @appointment.paging_or_on_deck?
     .row
       .col-sm-8.offset-sm-2
-        .alert.alert-success
-          %h4 You are on deck!
-          %p
-            Please return to the front of the store,
-            %strong you could be called at any time.
-          %p
-            If you don't answer when called, you will be put back in line, and if not around when this happens again, removed from the line!
+        - if @appointment.paging?
+          .alert.alert-danger
+            %h4 You are being paged!
+            %p
+              Please come to the front of the store and announce yourself
+              %strong
+                #{current_organization.short_name} is ready for you!
+            %p
+              If you don't answer when called, you will be put back in line, and if not around when this happens again, removed from the line!
+        - else
+          .alert.alert-success
+            %h4 You are on deck!
+            %p
+              Please return to the front of the store,
+              %strong you could be called at any time.
+            %p
+              If you don't answer when called, you will be put back in line, and if not around when this happens again, removed from the line!
+  - else
+    .row.mt-4.mb-4
+      .col-sm-8.offset-sm-2.text-center
+        - appointments_in_front = @appointments_in_line.pluck(:id).index(@appointment.id)
+        - appointments_in_front = 0 if appointments_in_front < 0
+        - not_on_deck_in_front_of = @appointments_in_line.line_not_paging_or_on_deck.pluck(:id).index(@appointment.id)
+        -# not_on_deck_in_front_of = 0 if not_on_deck_in_front_of < 0
+
+        %h4
+          = pluralize(appointments_in_front, "Person")
+          are in front of you
+        %p.less-strong
+          = pluralize(not_on_deck_in_front_of, "person")
+          before you will be "on deck"
+
   = form_for @appointment, { as: :appointment, url: organization_customer_appointment_path(@appointment.link_token, organization_id: current_organization.to_param, location_id: current_location&.id), action: "update", method: "PUT" } do |f|
     .row
       .form-group.col-sm-6
